fix: first step